--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "oguard"
 version = "0.0.0"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/jacobtread/oguard"
+authors = ["Jacobtread <jacobtread@gmail.com>"]
+readme = "README.md"
+description = "OGuard"
 
 [dependencies]
 futures = "0.3.30"
