--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,11 @@ description = "OGuard"
 
 [dependencies]
 anyhow = "1.0.86"
+dotenvy = "0.15.7"
+env_logger = "0.11.3"
 futures = "0.3.30"
 hidapi = "2.6.1"
+log = "0.4.22"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
