--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ env_logger = "0.11.3"
 futures = "0.3.30"
 hidapi = "2.6.1"
 log = "0.4.22"
+notify-rust = "4.11.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
