--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ description = "OGuard"
 
 [dependencies]
 anyhow = "1.0.86"
+axum = "0.7"
 dotenvy = "0.15.7"
 env_logger = "0.11.3"
 futures = "0.3.30"
@@ -18,4 +19,6 @@ log = "0.4.22"
 notify-rust = "4.11.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+thiserror = "1"
 tokio = { version = "1", features = ["full"] }
+tokio-stream = { version = "0.1", features = ["sync", "full"] }
