chore: cleanup deps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,31 @@ readme = "README.md"
 description = "OGuard"
 
 [dependencies]
-anyhow = "1.0.86"
+# Web framework
 axum = "0.7"
+
+# Environment variables
 dotenvy = "0.15.7"
-env_logger = "0.11.3"
-futures = "0.3.30"
-hidapi = "2.6.1"
-log = "0.4.22"
+
+# Desktop notifications
 notify-rust = "4.11.0"
+
+# Logging
+log = "0.4"
+env_logger = "0.11"
+
+# USB HID 
+hidapi = "2.6.1"
+
+# Serialization
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+
+# Error handling
 thiserror = "1"
+anyhow = "1"
+
+# Async runtime & utilities
 tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["sync", "full"] }
+futures = "0.3.30"
