feat: persistent logging of history, improved handling for initial state change check
Server periodically polls the current battery and device state every minute and logs it to the database in the battery history and state history tables

State check now handles bad states when there was no previous state (App booted up in power lost mode will emit the power lost event)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,13 +38,20 @@ tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["sync", "full"] }
 futures = "0.3.30"
 chrono = { version = "0.4.38", features = ["serde"] }
+ordered-float = { version = "4.2.1", features = ["serde"] }
 
 
 # SeaORM 
 [dependencies.sea-orm]
 version = "^0"
 default-features = false
-features = ["runtime-tokio-rustls", "macros", "with-chrono", "sqlx-sqlite"]
+features = [
+    "runtime-tokio-rustls",
+    "macros",
+    "with-chrono",
+    "sqlx-sqlite",
+    "with-json",
+]
 
 # SeaORM Migration 
 [dependencies.sea-orm-migration]
