--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ tokio-stream = { version = "0.1", features = ["sync", "full"] }
 futures = "0.3.30"
 chrono = { version = "0.4.38", features = ["serde"] }
 ordered-float = { version = "4.2.1", features = ["serde"] }
+tower-http = { version = "0.5.2", features = ["cors"] }
 
 
 # SeaORM 
