--- a/webapp/.gitignore
+++ b/webapp/.gitignore
@@ -15,7 +15,9 @@ Thumbs.db
 .env.*
 !.env.example
 !.env.test
+!.env.development
 
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
