--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,6 +23,7 @@
 		"globals": "^15.0.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"sass": "^1.77.6",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
@@ -31,5 +32,10 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@tanstack/svelte-query": "^5.50.1",
+		"@tanstack/svelte-query-devtools": "^5.50.1",
+		"bits-ui": "^0.21.11"
+	}
 }
