--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,7 +15,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/eslint": "^8.56.7",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -29,13 +29,16 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0-alpha.20",
+		"unplugin-icons": "^0.19.0",
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource-variable/inter": "^5.0.19",
 		"@tanstack/svelte-query": "^5.50.1",
 		"@tanstack/svelte-query-devtools": "^5.50.1",
-		"bits-ui": "^0.21.11"
+		"bits-ui": "^0.21.11",
+		"dayjs": "^1.11.11"
 	}
 }
