--- a/webapp/package.json
+++ b/webapp/package.json
@@ -36,6 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@carbon/charts-svelte": "^1.17.3",
 		"@fontsource-variable/inter": "^5.0.19",
 		"@tanstack/svelte-query": "^5.50.1",
 		"@tanstack/svelte-query-devtools": "^5.50.1",
