feat: events page

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -41,6 +41,7 @@
 		"@tanstack/svelte-query": "^5.50.1",
 		"@tanstack/svelte-query-devtools": "^5.50.1",
 		"bits-ui": "^0.21.11",
+		"date-picker-svelte": "^2.13.0",
 		"dayjs": "^1.11.11"
 	}
 }
