--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ notify-rust = "4.11.0"
 # Logging
 log = "0.4"
 env_logger = "0.11"
+log-panics = { version = "2", features = ["with-backtrace"] }
 
 # USB HID 
 hidapi = "2.6.1"
