--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ description = "OGuard"
 [dependencies]
 # Web framework
 axum = "0.7"
+tower-http = { version = "0.5.2", features = ["cors"] }
 
 # Environment variables
 dotenvy = "0.15.7"
@@ -38,10 +39,14 @@ anyhow = "1"
 tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["sync", "full"] }
 futures = "0.3.30"
+
+
 chrono = { version = "0.4.38", features = ["serde"] }
 ordered-float = { version = "4.2.1", features = ["serde"] }
-tower-http = { version = "0.5.2", features = ["cors"] }
 
+# Localization
+rust-i18n = "3"
+strum = { version = "0.26.3", features = ["derive"] }
 
 # SeaORM 
 [dependencies.sea-orm]
