--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ tower-http = { version = "0.5.2", features = ["cors"] }
 # Environment variables
 dotenvy = "0.15.7"
 
-# Desktop notifications
+# Desktop notifications & Dialogs
 notify-rust = "4.11.0"
+native-dialog = "0.7"
 
 # Logging
 log = "0.4"
