--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ strum = { version = "0.26.3", features = ["derive"] }
 # HTTP
 reqwest = "0.12.5"
 uuid = { version = "1.9.1", features = ["v4", "serde"] }
+system_shutdown = "4.0.1"
 
 # SeaORM 
 [dependencies.sea-orm]
