--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/eslint": "^8.56.7",
+		"@types/lodash": "^4.17.6",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -43,6 +44,7 @@
 		"bits-ui": "^0.21.11",
 		"date-picker-svelte": "^2.13.0",
 		"dayjs": "^1.11.11",
+		"lodash": "^4.17.21",
 		"svelte-i18n": "^4.0.0"
 	}
 }
