--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 description = "OGuard"
 
 [dependencies]
+windows-service = "0.7"
+
 # Web framework
 axum = "0.7"
 tower-http = { version = "0.5.2", features = ["cors"] }
@@ -21,8 +23,7 @@ notify-rust = "4.11.0"
 native-dialog = "0.7"
 
 # Logging
-log = "0.4"
-env_logger = "0.11"
+log = { version = "0.4", features = ["serde"] }
 log-panics = { version = "2", features = ["with-backtrace"] }
 
 # USB HID 
@@ -56,6 +57,8 @@ system_shutdown = "4.0.1"
 axum_session = { version = "0.14.0" }
 
 toml = "0.8.14"
+clap = { version = "4.5.9", features = ["derive"] }
+humantime = "2.1.0"
 
 # SeaORM 
 [dependencies.sea-orm]
@@ -74,3 +77,9 @@ features = [
 version = "^0"
 default-features = false
 features = ["runtime-tokio-rustls", "sqlx-sqlite"]
+
+# Logging provider 
+[dependencies.log4rs]
+version = "1.3.0"
+default-features = false
+features = ["console_appender", "file_appender"]
