--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,7 +14,7 @@
 	},
 	"devDependencies": {
 		"@iconify-json/solar": "^1.1.9",
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/eslint": "^8.56.7",
