--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/eslint": "^8.56.7",
 		"@types/lodash": "^4.17.6",
+		"@types/node": "^20.14.11",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
