--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -12,6 +12,7 @@ rustflags = ["-C", "link-arg=-fuse-ld=lld"]
 # On Linux:
 # - Ubuntu, `sudo apt-get install lld clang`
 # - Arch, `sudo pacman -S lld clang`
+# - Fedora, `sudo dnf install lld clang`
 [target.x86_64-unknown-linux-gnu]
 rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
 
