--- a/webapp/package.json
+++ b/webapp/package.json
@@ -29,6 +29,7 @@
 		"sass": "^1.77.6",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-headless-table": "^0.18.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0-alpha.20",
