--- a/webapp/.prettierrc
+++ b/webapp/.prettierrc
@@ -4,9 +4,7 @@
 	"trailingComma": "none",
 	"bracketSameLine": true,
 	"printWidth": 100,
-	"plugins": [
-		"prettier-plugin-svelte"
-	],
+	"plugins": ["prettier-plugin-svelte"],
 	"overrides": [
 		{
 			"files": "*.svelte",
