--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,42 +13,56 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@iconify-json/solar": "^1.1.9",
-		"@sveltejs/adapter-static": "^3.0.2",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@types/eslint": "^8.56.7",
+		"@eslint/compat": "^1.2.5",
+		"@eslint/js": "9.31.0",
+		"@iconify-json/solar": "1.2.2",
+		"@sveltejs/adapter-static": "3.0.8",
+		"@sveltejs/kit": "2.36.2",
+		"@sveltejs/vite-plugin-svelte": "6.1.0",
 		"@types/lodash": "^4.17.6",
 		"@types/node": "^20.14.11",
-		"eslint": "^9.0.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
+		"@tanstack/eslint-plugin-query": "5.81.2",
+		"eslint": "9.31.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-perfectionist": "4.15.0",
+		"eslint-plugin-storybook": "^9.1.2",
+		"eslint-plugin-svelte": "3.11.0",
+		"eslint-plugin-unused-imports": "4.1.4",
+		"prettier": "3.6.2",
+		"prettier-plugin-svelte": "3.4.0",
 		"sass": "^1.77.6",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"svelte-headless-table": "^0.18.2",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0-alpha.20",
-		"unplugin-icons": "^0.19.0",
-		"vite": "^5.0.3",
-		"vitest": "^1.2.0"
+		"svelte": "5.36.12",
+		"svelte-check": "4.3.0",
+		"@humanspeak/svelte-headless-table": "^6.0.0",
+		"typescript": "5.8.3",
+		"typescript-eslint": "8.37.0",
+		"unplugin-icons": "22.1.0",
+		"vite": "6.3.5",
+		"vitest": "^3.2.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"@carbon/charts-svelte": "^1.17.3",
 		"@fontsource-variable/inter": "^5.0.19",
-		"@tanstack/svelte-query": "^5.50.1",
-		"@tanstack/svelte-query-devtools": "^5.50.1",
-		"bits-ui": "^0.21.11",
-		"date-picker-svelte": "^2.13.0",
+		"@tanstack/svelte-query": "https://pkg.pr.new/@tanstack/svelte-query@746b9c5",
+		"@tanstack/svelte-query-devtools": "https://pkg.pr.new/@tanstack/svelte-query-devtools@746b9c5",
+		"runed": "0.31.0",
+		"bits-ui": "2.8.11",
+		"date-picker-svelte": "^2.16.0",
 		"dayjs": "^1.11.11",
 		"lodash": "^4.17.21",
 		"svelte-dnd-action": "^0.9.49",
 		"svelte-i18n": "^4.0.0",
-		"svelte-sonner": "^0.3.27"
+		"svelte-sonner": "1.0.5"
+	},
+	"overrides": {
+		"@sveltejs/kit": {
+			"cookie": "^0.7.0"
+		}
+	},
+	"npm": {
+		"overrides": {
+			"cookie": "^0.7.0"
+		}
 	}
 }
