--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,13 +15,14 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "9.31.0",
+		"@humanspeak/svelte-headless-table": "^6.0.0",
 		"@iconify-json/solar": "1.2.2",
 		"@sveltejs/adapter-static": "3.0.8",
 		"@sveltejs/kit": "2.36.2",
 		"@sveltejs/vite-plugin-svelte": "6.1.0",
+		"@tanstack/eslint-plugin-query": "5.81.2",
 		"@types/lodash": "^4.17.6",
 		"@types/node": "^20.14.11",
-		"@tanstack/eslint-plugin-query": "5.81.2",
 		"eslint": "9.31.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-perfectionist": "4.15.0",
@@ -30,10 +31,9 @@
 		"eslint-plugin-unused-imports": "4.1.4",
 		"prettier": "3.6.2",
 		"prettier-plugin-svelte": "3.4.0",
-		"sass": "^1.77.6",
+		"sass-embedded": "^1.92.1",
 		"svelte": "5.36.12",
 		"svelte-check": "4.3.0",
-		"@humanspeak/svelte-headless-table": "^6.0.0",
 		"typescript": "5.8.3",
 		"typescript-eslint": "8.37.0",
 		"unplugin-icons": "22.1.0",
@@ -46,11 +46,11 @@
 		"@fontsource-variable/inter": "^5.0.19",
 		"@tanstack/svelte-query": "https://pkg.pr.new/@tanstack/svelte-query@746b9c5",
 		"@tanstack/svelte-query-devtools": "https://pkg.pr.new/@tanstack/svelte-query-devtools@746b9c5",
-		"runed": "0.31.0",
 		"bits-ui": "2.8.11",
 		"date-picker-svelte": "^2.16.0",
 		"dayjs": "^1.11.11",
 		"lodash": "^4.17.21",
+		"runed": "0.31.0",
 		"svelte-dnd-action": "^0.9.49",
 		"svelte-i18n": "^4.0.0",
 		"svelte-sonner": "1.0.5"
