feat: ported majority of components and start switching table library
Switching table library to use tanstack table core as svelte-headless-table doesn't seem to work too well with svelte 5, running into lots of thrown errors

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -46,6 +46,8 @@
 		"@fontsource-variable/inter": "^5.0.19",
 		"@tanstack/svelte-query": "https://pkg.pr.new/@tanstack/svelte-query@746b9c5",
 		"@tanstack/svelte-query-devtools": "https://pkg.pr.new/@tanstack/svelte-query-devtools@746b9c5",
+		"@tanstack/match-sorter-utils": "^8.15.0",
+		"@tanstack/table-core": "^8.21.3",
 		"bits-ui": "2.8.11",
 		"date-picker-svelte": "^2.16.0",
 		"dayjs": "^1.11.11",
